# profmatch-be

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  profmatch-results-2026-04-01-wits.md  profmatch-results-2026-04-01.md  pyproject.toml  pytest.ini  verify_discovery.py
.github/workflows/: preview.yml  prod.yml
app/: config.py  dependencies.py  main.py
app/api/: deps.py
app/api/routes/: admin.py  auth.py  credits.py  internal.py  matches.py  promo.py
app/core/: config.py  db.py  rate_limit.py  security.py
app/middleware/: __init__.py  timing.py
app/models/: __init__.py  agent_models.py  credit.py  database.py  job.py  promo.py  schemas.py  user.py
app/routes/: admin.py  auth.py  credits.py  match.py  professor.py  session.py  upload.py
app/schemas/: admin.py  auth.py  match.py
app/services/: account.py  api_cache.py  auth.py  cache.py  cleanup.py  credits.py  cv.py  database.py  gemini.py  mcp_client.py  openalex.py  orchestrator.py  promo.py  redis.py  session_store.py  tools.py
app/services/enrichment/: fallback.py  openalex.py
app/services/matching/: __init__.py  enrichment.py  faculty.py  (+5 more)
app/utils/: storage.py  validators.py
app/workers/: job.py  queue.py  worker.py
deploy/: cloudrun-entrypoint.sh
mcp-servers/document-server/: server.py
mcp-servers/scholar-server/: server.py
mcp-servers/search-server/: server.py
mcp-servers/university-server/: server.py
migrations/: env.py
migrations/versions/: 3b3a1b0d6d02_initial_schema.py
tests/: conftest.py  test_contract.py  test_credits.py  test_enrichment.py  test_integration.py  test_ranking_output.py  test_scoring.py
tests/integration/: test_health.py  test_session_routes.py  test_upload_routes.py
tests/unit/: test_matching_regressions.py  test_openalex.py  test_orchestrator.py  test_redis.py  test_schemas.py  test_session_store.py  test_storage.py  test_validators.py
(+6 files in other folders)
