[project]
name = "profmatch"
version = "0.1.0"
description = "Professor-student research matching platform backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "arq>=0.26",
    "httpx>=0.27",
    "tenacity>=8.4",
    "trafilatura>=1.10",
    "selectolax>=0.3",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "google-genai>=0.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.1",  # passlib 1.7.4 breaks against bcrypt >= 4.1
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "slowapi>=0.1.9",
    "email-validator>=2.1",
]

[dependency-groups]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.5"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
